@@ -10,6 +10,10 @@ Revision history for Perl distribution PathTools.
  - Apparently the _NT_cwd() routine is never defined externally like I
    thought it was, so I simplified the code around it.
 
+ - When cwd() is implemented using the _backtick_pwd() function, it
+   sometimes could create accidental undef entries in %ENV.  This is
+   now fixed. [Neil Watkiss]
+
 3.08  Sat May 28 10:10:29 CDT 2005
 
  - Fixed a test failure with fast_abs_path() on Windows - it was
